external-crates/move/crates/move-compiler/tests/move_2024/suggestions/suggestion_1.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E03006]: unexpected name in this position
  ┌─ tests/move_2024/suggestions/suggestion_1.move:4:25
  │
2 │     fun fool() { }
  │         ---- Similarly named defintion found here
3 │     // Edit distance is too far away
4 │     public fun call() { goof() }
  │                         ^^^^
  │                         │
  │                         Could not resolve the name 'goof'
  │                         Did you mean: 'fool'
